; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_tclsqlite.c_DbTraceHandler.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_tclsqlite.c_DbTraceHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @DbTraceHandler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @DbTraceHandler(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %8, %struct.TYPE_2__** %5, align 8
  %9 = call i32 @Tcl_DStringInit(i32* %6)
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @Tcl_DStringAppend(i32* %6, i32 %12, i32 -1)
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @Tcl_DStringAppendElement(i32* %6, i8* %14)
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @Tcl_DStringValue(i32* %6)
  %20 = call i32 @Tcl_Eval(i32 %18, i32 %19)
  %21 = call i32 @Tcl_DStringFree(i32* %6)
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @Tcl_ResetResult(i32 %24)
  ret void
}

declare dso_local i32 @Tcl_DStringInit(i32*) #1

declare dso_local i32 @Tcl_DStringAppend(i32*, i32, i32) #1

declare dso_local i32 @Tcl_DStringAppendElement(i32*, i8*) #1

declare dso_local i32 @Tcl_Eval(i32, i32) #1

declare dso_local i32 @Tcl_DStringValue(i32*) #1

declare dso_local i32 @Tcl_DStringFree(i32*) #1

declare dso_local i32 @Tcl_ResetResult(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
